# gllama

./: config.py  main.py  pyproject.toml
commands/: __init__.py  chat.py  copy.py  create.py  delete.py  embed.py  pull.py  run.py  view.py
gllama/: __main__.py
gllama/commands/: __init__.py  chat.py  copy.py  create.py  delete.py  embed.py  pull.py  run.py  view.py
gllama/ui/: colors.py  handler.py
gllama/util/: __init__.py  checks.py  digest.py
ui/: __init__.py  handler.py  loading.py  typewriter.py
util/: checks.py
